<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/second_gradient_start">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/back"
        android:textAllCaps="true"
        android:textColor="@color/White"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@color/White"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <TextView
        android:id="@+id/numeroQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/numquestion"
        android:textAllCaps="true"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/afficheQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:background="@drawable/question_textview"
        android:text="@string/question"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="24sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numeroQ" />

    <Button
        android:id="@+id/reponse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_answer"
        android:onClick="changerQuestionSuivant"
        android:text="@string/rep1"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/reponse3"
        app:layout_constraintEnd_toStartOf="@+id/reponse2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/afficheQ" />

    <Button
        android:id="@+id/reponse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_answer"
        android:onClick="changerQuestionSuivant"
        android:text="@string/rep2"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/reponse4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reponse1"
        app:layout_constraintTop_toBottomOf="@+id/afficheQ" />

    <Button
        android:id="@+id/reponse3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_answer"
        android:onClick="changerQuestionSuivant"
        android:text="@string/rep3"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/reponse4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reponse1" />

    <Button
        android:id="@+id/reponse4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_answer"
        android:onClick="changerQuestionSuivant"
        android:text="@string/rep4"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reponse3"
        app:layout_constraintTop_toBottomOf="@+id/reponse2" />
</android.support.constraint.ConstraintLayout>